--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^3.4.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@vitejs/plugin-vue": "^4.6.2",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
@@ -23,7 +24,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.19.0",
-    "font-awesome": "4.7.0",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
     "unplugin-fonts": "^1.1.0",
