--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "core-js": "^3.34.0",
     "eslint": "^8.56.0",
     "roboto-fontface": "^0.10.0",
-    "simple-icons": "^11.1.0",
     "vue": "^3.4.7",
-    "vue3-simple-icons": "^11.0.0",
     "vuetify": "^3.4.10"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.6.2",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
