Add catch-all page, change titles, add robots.txt and simple sitemap

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "@unhead/vue": "^1.9.10",
     "core-js": "^3.37.0",
     "eslint": "^8.56.0",
     "roboto-fontface": "^0.10.0",
